--- a/app/templates/basquete.html
+++ b/app/templates/basquete.html
@@ -3,6 +3,6 @@
 {% block content %}
     <div style="text-align: center; padding: 5em 1em;">
         <h1>Análises de Basquete</h1>
-        <p style="font-size: 1.2em; color: #555;">🚀 Em breve!</p>
+        <p style="font-size: 1.2em; color: #ffff;">🚀 Em breve!</p>
     </div>
 {% endblock %}
