--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -57,6 +57,6 @@
     </footer>
 
     <script src="{{ url_for('static', filename='js/analysis_loader.js') }}"></script>
-    {% block scripts %}{% endblock %}
+    <script src="{{ url_for('static', filename='js/carousel.js') }}"></script> {% block scripts %}{% endblock %}
 </body>
 </html>
