--- a/app/templates/analysis_detail.html
+++ b/app/templates/analysis_detail.html
@@ -47,6 +47,7 @@
                     <img src="{{ analysis.visitante_escudo }}" alt="Escudo do {{ analysis.visitante_nome }}">
                 </div>
                 <p><strong>Competição:</strong> {{ analysis.liga_nome }}</p>
+                <p><strong>Horário:</strong> {{ analysis.horario }}</p>
                 <p><strong>Cenário de Maior Probabilidade:</strong> {{ analysis.recomendacao }}</p>
             </div>
 
